# wagtail-humanitarian-icons

./: MANIFEST.in  README.md  setup.cfg
.github/workflows/: publish.yml
sandbox/home/: models.py
sandbox/home/migrations/: 0003_homepage_icon.py
sandbox/home/templates/home/: home_page.html  welcome_page.html
sandbox/sandbox/settings/: base.py  dev.py
wagtailhumanitarianicons/: apps.py  icons.json  utils.py  wagtail_hooks.py  widgets.py
wagtailhumanitarianicons/templates/wagtailhumanitarianicons/widgets/: icon_chooser.html
