[metadata]
name = wagtail-humanitarian-icons
version = 1.0.0
description = Ocha Humanitarian Icons, for use in  Wagtail projects, with an icon chooser widget.
long_description = file:README.md
url = https://github.com/wmo-raf/wagtail-humanitarian-icons
author = Erick Otenyo
author_email = otenyo.erick@gmail.com
license = MIT
classifiers =
    Development Status :: 5 - Production/Stable
    Environment :: Web Environment
    Intended Audience :: Developers
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: Implementation :: CPython
    Topic :: Software Development :: Libraries :: Application Frameworks
    Topic :: Software Development :: Libraries :: Python Modules

[options]
packages = find:
include_package_data = true
python_requires = >=3.9
install_requires =
    wagtail>=4.2.2





